@@ -116,7 +116,6 @@
 /test-login
 /test-login-shared
 /test-login-tables
-/test-loopback
 /test-machine-tables
 /test-namespace
 /test-network
